improvement: finally fontawesome icons in whole rt module

--- a/templates/default/rt/rtcategoryedit.html
+++ b/templates/default/rt/rtcategoryedit.html
@@ -14,7 +14,7 @@
     <THEAD>
 	<TR>
 	    <TD>
-		<IMG src="img/queue.gif" ALT="">
+			{icon name="queue"}
 	    </TD>
 	    <TD class="bold">{trans("Name:")}</TD>
 	    <TD class="bold">
@@ -25,7 +25,7 @@
     <TBODY>
 	<TR>
 	    <TD>
-		<IMG src="img/info1.gif" ALT="">
+			{icon name="description"}
 	    </TD>
 	    <TD class="bold">{trans("Description:")}</TD>
 	    <TD>
@@ -60,7 +60,7 @@
 	</TR>
 	<TR>
 	    <TD>
-		<IMG src="img/users.gif" ALT="">
+			{icon name="user"}
 	    </TD>
 	    <TD><B>{trans("Users:")}</B></TD>
 	    <TD>
