--- a/templates/default/rt/rtcategoryinfo.html
+++ b/templates/default/rt/rtcategoryinfo.html
@@ -12,7 +12,7 @@
     <THEAD>
 	<TR>
 	    <TD>
-		<IMG src="img/queue.gif" ALT="">
+			{icon name="queue"}
 	    </TD>
 	    <TD class="bold" colspan="2">{$category.name} ({$category.id|string_format:"%04d"})</TD>
 	</TR>
@@ -21,7 +21,7 @@
 	{if $category.description}
 	<TR>
 	    <TD>
-		<IMG src="img/info1.gif" ALT="">
+			{icon name="description"}
 	    </TD>
 	    <TD class="bold">{trans("Description:")}</TD>
 	    <TD>
@@ -49,7 +49,7 @@
         </TR>
 	<TR>
 	    <TD>
-		<IMG src="img/users.gif" ALT="">
+			{icon name="user"}
 	    </TD>
 	    <TD class="bold">{trans("Users:")}</TD>
 	    <TD>
