--- a/templates/default/rt/rtsearch.html
+++ b/templates/default/rt/rtsearch.html
@@ -21,8 +21,7 @@
     <TBODY>
 	<TR>
 		<TD class="bold nobr">
-			<IMG src="img/ticket.gif" alt="">
-			{trans("Subject:")}
+			{icon name="subject" label="Subject"}
 		</TD>
 		<TD>
 			<INPUT type="search" size="50" name="search[subject]" value="{$search.subject}" {tip text="Enter subject"}>
@@ -30,8 +29,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			<IMG src="img/mail.gif" alt="">
-			{trans("Body:")}
+			{icon name="message" label="Body:"}
 		</TD>
 		<TD>
 			<INPUT type="search" size="50" name="search[body][pattern]" value="{$search.body.pattern}" {tip text="Enter body fragment"}>
@@ -43,8 +41,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			<IMG src="img/customer.gif" alt="">
-			{trans("Requestor:")}
+			{icon name="requestor" label="Requestor:"}
 		</TD>
 		<TD>
 			<TABLE width="100%" cellpadding="1">
@@ -69,8 +66,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			<IMG src="img/home.gif" alt="">
-			{trans("Address:")}
+			{icon name="home" label="Address"}
 		</TD>
 		<TD class="nobr">
 			<INPUT type="text" name="search[address]" VALUE="{$search.address}">
@@ -80,8 +76,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			<IMG src="img/users.gif" alt="">
-			{trans("Owner:")}
+			{icon name="owner" label="Owner"}
 		</TD>
 		<TD>
 			<SELECT size="1" name="search[owner]" {tip text="Select user/owner of the ticket"}>
@@ -94,8 +89,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			<IMG src="img/queue.gif" alt="">
-			{trans("Queue:")}
+			{icon name="queue" label="Queue"}
 		</TD>
 		<TD>
 			<SELECT size="1" name="search[queue][]" {tip text="Select queue" class="lms-ui-multiselect" trigger="queue"} multiple data-default-value="{trans("- all -")}">
@@ -107,8 +101,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			<IMG src="img/dead.gif" alt="">
-			{trans("Status:")}
+			{icon name="delete" label="Status"}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[state]" {tip text="Select ticket status"}>
@@ -121,8 +114,7 @@
 		</TD>
 	<TR>
 		<TD class="bold nobr">
-			<IMG src="img/service-type.png" alt="">
-			{trans("Service:")}
+			{icon name="service" label="Service type"}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[service]" {tip text="Select ticket service" }>
@@ -134,8 +126,7 @@
 		</TD>
 	<TR>
 		<TD class="bold nobr">
-			<IMG src="img/ticket-type.png" alt="">
-			{trans("Ticket type:")}
+			{icon name="helpdesk" label="Ticket type:"}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[type]" {tip text="Select ticket type" }>
@@ -148,8 +139,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			<IMG src="img/report.gif" alt="">
-			{trans("Priority:")}
+			{icon name="priority" label="Priority"}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[priority]" {tip text="Select ticket priority"}>
@@ -163,8 +153,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			<IMG src="img/time.gif" alt="">
-			{trans("Min. Uptime")}
+			{icon name="uptime" label="Min. Uptime"}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[uptime]" {tip text="Select ticket uptime"}>
@@ -177,8 +166,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr valign-top">
-			<IMG src="img/queue.gif" alt="">
-			{trans("Categories:")}
+			{icon name="categories" label="Categories"}
 		</TD>
 		<TD class="nobr">
 			{include file="rt/rtcategoryselection.html" name_prefix="search[categories]" categories=$categories}
@@ -187,8 +175,7 @@
 	{if ConfigHelper::checkPrivilege('helpdesk_advanced_operations')}
 	<TR>
 		<TD class="bold nobr">
-			<IMG src="img/dead.gif" alt="">
-			{trans("Removed:")}
+			{icon name="delete" label="Removed:"}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[removed]" {tip text="Select ticket status"}>
@@ -200,7 +187,7 @@
 	</TR>
 	{/if}
 	<TR>
-        <TD class="bold nobr"><img src="img/netnode.png" alt=""> {trans("Network node:")}</TD>
+        <TD class="bold nobr">{icon name="netnode" label="Network node:"}</TD>
 		<TD class="nobr">
 			<SELECT name="search[netnodeid]" {tip text="Select network node (optional)" trigger="netnodeid"} onchange="xajax_netnode_changed($(this).val(), $('#netdevid').val())">
 				<OPTION value="">{trans("- none -")}</OPTION>
@@ -211,7 +198,7 @@
 		</TD>
 	</TR>
 	<TR>
-        <TD class="bold nobr"><img src="img/netdev.gif" alt=""> {trans("Device:")}</TD>
+        <TD class="bold nobr">{icon name="netdevice" label="Device:"}</TD>
 		<TD class="nobr" id="rtnetdevs">
 			{include file="rt/rtnetdevs.html" form="search"}
 		</TD>
@@ -228,7 +215,7 @@
 		</TD>
         </TR>
         <TR>
-		<TD class="bold nobr"><img src="img/calendar.gif" alt=""> {trans("Deadline expired:")}</TD>
+		<TD class="bold nobr">{icon name="deadline" label="Deadline expired:"}</TD>
 		<TD>
 			<INPUT TYPE="checkbox" NAME="search[expired]" VALUE="1" {tip text="Check if ticket is expired" trigger="expired"}>
 		</TD>
