--- a/templates/default/rt/rtcategoryadd.html
+++ b/templates/default/rt/rtcategoryadd.html
@@ -14,7 +14,7 @@
     <THEAD>
 	<TR>
 	    <TD>
-		{icon name="queue"}
+		{icon name="queue" fw=true}
 	    </TD>
 	    <TD class="bold">{trans("Name:")}</TD>
 	    <TD>
@@ -25,7 +25,7 @@
     <TBODY class="lms-ui-multi-check">
 	<TR>
 	    <TD>
-		{icon name="optional-info"}
+		{icon name="optional-info" fw=true}
 	    </TD>
 	    <TD class="bold">{trans("Description")}:</TD>
 	    <TD>
@@ -34,7 +34,7 @@
 	</TR>
 	<TR>
 	    <TD>
-			{icon name="color"}
+			{icon name="color" fw=true}
 	    </TD>
 	    <TD class="bold">
 			<label for="background-style">
@@ -47,7 +47,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="color"}
+			{icon name="color" fw=true}
 		</TD>
 		<TD class="bold">
 			<label for="text-style">
@@ -60,7 +60,7 @@
 	</TR>
 	<TR>
 	    <TD>
-		{icon name="owner"}
+		{icon name="owner" fw=true}
 	    </TD>
 	    <TD class="bold">{trans("Users:")}</TD>
 	    <TD>
