--- a/templates/default/rt/rtcategoryinfo.html
+++ b/templates/default/rt/rtcategoryinfo.html
@@ -12,7 +12,7 @@
     <THEAD>
 	<TR>
 	    <TD>
-		{icon name="queue"}
+		{icon name="queue" fw=true}
 	    </TD>
 	    <TD class="bold" colspan="2">{$category.name} ({$category.id|string_format:"%04d"})</TD>
 	</TR>
@@ -21,7 +21,7 @@
 	{if $category.description}
 	<TR>
 	    <TD>
-		{icon name="description"}
+		{icon name="description" fw=true}
 	    </TD>
 	    <TD class="bold">{trans("Description:")}</TD>
 	    <TD>
@@ -37,7 +37,7 @@
 	{/if}
         <TR>
             <TD>
-		{icon name="helpdesk"}
+		{icon name="helpdesk" fw=true}
             </TD>
             <TD class="bold">{trans("<!rt-category>Look:")}
 	    </TD>
@@ -49,7 +49,7 @@
         </TR>
 	<TR>
 	    <TD>
-		{icon name="user"}
+		{icon name="user" fw=true}
 	    </TD>
 	    <TD class="bold">{trans("Users:")}</TD>
 	    <TD>
@@ -70,7 +70,7 @@
 				<INPUT type="hidden" name="category[usernames][{$right.id}]" value="{$right.name}">
 			    </TD>
 			    <TD class="text-center">
-				{if $owner.owner > 0}{icon name="permissions"}{/if}
+				{if $owner.owner > 0}{icon name="permissions" fw=true}{/if}
 			    </TD>
 			</TR>
 			{/if}
