--- a/templates/default/rt/rtticketmodify.html
+++ b/templates/default/rt/rtticketmodify.html
@@ -283,7 +283,7 @@
 				{include file="rt/rtnetdevs.html" form="ticket-form"}
 			{/box_row}
 
-			{box_row id="customernotify-row" icon="img/mail.gif" label="Notify customer:" labelid="customernotify"}
+			{box_row id="customernotify-row" icon="message" label="Notify customer:" labelid="customernotify"}
 				<input type="checkbox" id="customernotify" name="ticket[customernotify]" value="1"{if isset($ticket.customernotify)} checked{/if}>
 			{/box_row}
 
