devel: change the way user name is displayed in configuration mamagement

--- a/templates/default/config/configedit.html
+++ b/templates/default/config/configedit.html
@@ -92,7 +92,7 @@
 										{trans("User")}
 									</td>
 									<td>
-										<strong>{$userinfo.login} / {$userinfo.firstname} {$userinfo.lastname}</strong>
+										<strong>{$userinfo.rname} ({$userinfo.login})</strong>
 										<INPUT type="hidden" name="config[userid]" value="{$config.userid}">
 									</td>
 								</tr>
