--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -128,7 +128,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="phone]" fw=true} {trans("Phone:")}
+			{icon name="phone" fw=true} {trans("Phone:")}
 		</TD>
 		<TD class="nobr">
 			<INPUT type="tel" name="search[phone]" VALUE="{$search.phone}">
