--- a/templates/default/rt/rtsearch.html
+++ b/templates/default/rt/rtsearch.html
@@ -21,7 +21,7 @@
     <TBODY>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="subject" label="Subject"}
+			{icon name="subject" label="Subject" fw=true}
 		</TD>
 		<TD>
 			<INPUT type="search" size="50" name="search[subject]" value="{$search.subject}" {tip text="Enter subject"}>
@@ -29,7 +29,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="message" label="Body:"}
+			{icon name="message" label="Body:" fw=true}
 		</TD>
 		<TD>
 			<INPUT type="search" size="50" name="search[body][pattern]" value="{$search.body.pattern}" {tip text="Enter body fragment"}>
@@ -41,7 +41,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="requestor" label="Requestor:"}
+			{icon name="requestor" label="Requestor:" fw=true}
 		</TD>
 		<TD>
 			<TABLE width="100%" cellpadding="1">
@@ -66,7 +66,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="home" label="Address"}
+			{icon name="home" label="Address" fw=true}
 		</TD>
 		<TD class="nobr">
 			<INPUT type="text" name="search[address]" VALUE="{$search.address}">
@@ -76,7 +76,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="owner" label="Owner"}
+			{icon name="owner" label="Owner" fw=true}
 		</TD>
 		<TD>
 			<SELECT size="1" name="search[owner]" {tip text="Select user/owner of the ticket"}>
@@ -89,7 +89,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="queue" label="Queue"}
+			{icon name="queue" label="Queue" fw=true}
 		</TD>
 		<TD>
 			<SELECT size="1" name="search[queue][]" {tip text="Select queue" class="lms-ui-multiselect" trigger="queue"} multiple data-default-value="{trans("- all -")}">
@@ -101,7 +101,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="delete" label="Status"}
+			{icon name="delete" label="Status" fw=true}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[state]" {tip text="Select ticket status"}>
@@ -114,7 +114,7 @@
 		</TD>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="service" label="Service type"}
+			{icon name="service" label="Service type" fw=true}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[service]" {tip text="Select ticket service" }>
@@ -126,7 +126,7 @@
 		</TD>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="helpdesk" label="Ticket type:"}
+			{icon name="helpdesk" label="Ticket type:" fw=true}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[type]" {tip text="Select ticket type" }>
@@ -139,7 +139,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="priority" label="Priority"}
+			{icon name="priority" label="Priority" fw=true}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[priority]" {tip text="Select ticket priority"}>
@@ -153,7 +153,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="uptime" label="Min. Uptime"}
+			{icon name="uptime" label="Min. Uptime" fw=true}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[uptime]" {tip text="Select ticket uptime"}>
@@ -166,7 +166,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr valign-top">
-			{icon name="categories" label="Categories"}
+			{icon name="categories" label="Categories" fw=true}
 		</TD>
 		<TD class="nobr">
 			{include file="rt/rtcategoryselection.html" name_prefix="search[categories]" categories=$categories}
@@ -175,7 +175,7 @@
 	{if ConfigHelper::checkPrivilege('helpdesk_advanced_operations')}
 	<TR>
 		<TD class="bold nobr">
-			{icon name="delete" label="Removed:"}
+			{icon name="delete" label="Removed:" fw=true}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="search[removed]" {tip text="Select ticket status"}>
@@ -187,7 +187,7 @@
 	</TR>
 	{/if}
 	<TR>
-        <TD class="bold nobr">{icon name="netnode" label="Network node:"}</TD>
+        <TD class="bold nobr">{icon name="netnode" label="Network node:" fw=true}</TD>
 		<TD class="nobr">
 			<SELECT name="search[netnodeid]" {tip text="Select network node (optional)" trigger="netnodeid"} onchange="xajax_netnode_changed($(this).val(), $('#netdevid').val())">
 				<OPTION value="">{trans("- none -")}</OPTION>
@@ -198,13 +198,13 @@
 		</TD>
 	</TR>
 	<TR>
-        <TD class="bold nobr">{icon name="netdevice" label="Device:"}</TD>
+        <TD class="bold nobr">{icon name="netdevice" label="Device:" fw=true}</TD>
 		<TD class="nobr" id="rtnetdevs">
 			{include file="rt/rtnetdevs.html" form="search"}
 		</TD>
 	</TR>
         <TR>
-		<TD class="bold nobr">{box_row icon="verifier" label="Verifier:" field_id="rtverifiers"}{/box_row}</TD>
+		<TD class="bold nobr">{box_row icon="verifier" icon_class="fa-fw" label="Verifier:" field_id="rtverifiers"}{/box_row}</TD>
 		<TD>
                         <SELECT size="1" name="search[verifierid]" {tip text="Select user/owner of the ticket"}>
                                 <OPTION value="0">{trans("- all owners -")}</OPTION>
@@ -215,7 +215,7 @@
 		</TD>
         </TR>
         <TR>
-		<TD class="bold nobr">{icon name="deadline" label="Deadline expired:"}</TD>
+		<TD class="bold nobr">{icon name="deadline" label="Deadline expired:" fw=true}</TD>
 		<TD>
 			<INPUT TYPE="checkbox" NAME="search[expired]" VALUE="1" {tip text="Check if ticket is expired" trigger="expired"}>
 		</TD>
