--- a/templates/default/rt/rtsearch.html
+++ b/templates/default/rt/rtsearch.html
@@ -222,7 +222,7 @@
         </TR>
 	<TR>
 		<TD class="buttons" colspan="2">
-			{button icon="search" label="Search" href="javascript:document.search.submit();" accesskey="s"}
+			{button icon="search" label="Search" onclick="document.search.submit()" accesskey="s"}
 		</TD>
 	</TR>
     </TBODY>
