--- a/templates/default/tariff/tariffinfo.html
+++ b/templates/default/tariff/tariffinfo.html
@@ -149,7 +149,7 @@
                                 <TD><IMG SRC="img/tax.gif" ALT=""></TD>
                                 <TD>{trans("Split payment:")}</TD>
                                 <TD>
-                                    {if $tariff.splitpayment}{trans("yes")}{else}{trans("no")}{/if}
+                                    {if $tariff.splitpayment}{icon name="checked" tip="yes"}{else}-{/if}
                                 </TD>
                             </TR>
                             <TR>
