bugfix: missed fa icon

--- a/templates/default/config/configadd.html
+++ b/templates/default/config/configadd.html
@@ -195,7 +195,7 @@
 							{if ConfigHelper::checkPrivilege('superuser') && empty($reftype)}
 								<TR>
 									<TD>
-										<img src="img/desc.gif" alt="">
+										{icon name="type" fw=true}
 									</TD>
 									<TD class="bold">
 										{trans("Type:")}
