--- a/templates/default/rt/rtticketprint.html
+++ b/templates/default/rt/rtticketprint.html
@@ -172,7 +172,7 @@
 		<TD class="HEAD text-right">
 			{if $message.attachments}
 				{foreach $message.attachments as $attachment}
-					{$attachment.filename} {icon name="attachement"}<br>
+					{$attachment.filename} {icon name="attachement" fw=true}<br>
 				{/foreach}
 			{/if}
 		</TD>
