--- a/templates/default/rt/rtqueuemodify.html
+++ b/templates/default/rt/rtqueuemodify.html
@@ -420,7 +420,7 @@
 			<div class="lms-ui-box-row">
 				<fieldset>
 					<legend>
-						{icon name="notifications"}
+						{icon name="notifications" fw=true}
 						<strong>{trans("Customer notifications")}</strong>
 					</legend>
 					<div id="notification-tabs">
@@ -604,7 +604,7 @@
 			<div class="lms-ui-box-row">
 				<fieldset>
 					<legend>
-						{icon name="verifier"}
+						{icon name="verifier" fw=true}
 						<strong>{trans("Verifier notifications")}</strong>
 					</legend>
 					<div id="verifier-notifications" class="lms-ui-box">
